abstract do artigo do sac 2014

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 			<nav role="navigation">
 				<ul>
 					<li><a href="index.html"><i class="icon-home"></i></a></li>
+					<li><a href="index.html"><i class="icon-facebook"></i></a></li>
 				</ul>
 			</nav>
 			<div class="featured">
@@ -76,9 +77,9 @@
 				<div class="fh5co-entry padding">
 					<img src="images/project-1.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
+						<span class="fh5co-post-date">March 24, 2014</span>
+						<h2><a href="sac14.html">Automatic categorization of questions from Q&A sites</a></h2>
+						<p>ACM Symposium on Applied Computing - SAC, 2014, Gyeongju, Korea.</p>
 					</div>
 				</div>
 
