sac 2014 description and authors

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 					<img src="images/project-1.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
 						<span class="fh5co-post-date">March 24, 2014</span>
-						<h2><a href="sac14.html">Automatic categorization of questions from Q&A sites</a></h2>
-						<p>ACM Symposium on Applied Computing - SAC, 2014, Gyeongju, Korea.</p>
+						<h2><a href="sac14.html">Automatic Categorization of Questions from Q&A Sites</a></h2>
+						<p><b>E. Campos</b>, M. Maia</p>
+						<p>Proceedings of the 29th Annual ACM Symposium on Applied Computing - SAC, 2014, Gyeongju, Korea.</p>
 					</div>
 				</div>
 
