CBSOFT 2014 paper description

--- a/index.html
+++ b/index.html
@@ -80,16 +80,17 @@
 						<span class="fh5co-post-date">March 24, 2014</span>
 						<h2><a href="sac14.html">Automatic Categorization of Questions from Q&A Sites</a></h2>
 						<p><b>E. Campos</b>, M. Maia</p>
-						<p>Proceedings of the 29th Annual ACM Symposium on Applied Computing - SAC, 2014, Gyeongju, Korea.</p>
+						<p><i>Proceedings of the 29th Annual ACM Symposium on Applied Computing - SAC, Gyeongju, Korea, 2014, 3 pages.</i></p>
 					</div>
 				</div>
 
 				<div class="fh5co-entry padding">
 					<img src="images/project-2.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
+						<span class="fh5co-post-date">November 3, 2014</span>
+						<h2><a href="cbsoft14.html">Nuggets Miner: Assisting Developers by Harnessing the StackOverflow Crowd Knowledge and the GitHub Traceability</a></h2>
+						<p><b>E. Campos</b>, L. Souza, M. Maia</p>
+						<p><i>Proceedings of the Brazilian Conference on Software: Theory and Practice (CBSoft 2014) - Tool Session. Maceió, Brazil, 2014, 8 pages. Second-place Best Tool Award.</i></p>
 					</div>
 				</div>
 
