--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
 				<div class="fh5co-entry padding">
 					<img src="images/project-3.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
+						<span class="fh5co-post-date">November 3, 2014</span>
+						<h2><a href="sbes2014.html">On the Extraction of Cookbooks for APIs from the Crowd Knowledge</a></h2>
+						<p>L. Souza, <b>E. Campos</b>, M. Maia</p>
+						<p><i>Proceedings of the 28th Brazilian Symposium on Software Engineering - SBES, Maceió, Brazil, 2014, 10 pages. Acceptance rate: 24%.</i></p>
 					</div>
 				</div>
 
