--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
 			<nav role="navigation">
 				<ul>
 					<li><a href="index.html"><i class="icon-home"></i></a></li>
-					<li><a href="index.html"><i class="icon-facebook"></i></a></li>
+					<li><a href="https://www.facebook.com/eduardo.campos.9256028"><i class="icon-facebook"></i></a></li>
 				</ul>
 			</nav>
 			<div class="featured">
 				<span>Bio</span>
-				<h2>I'm John Doe, Creative Director at <a href="http://freehtml5.co">FreeHTML5.co</a></h2>
+				<h2>Hi! I'm Eduardo Campos, a Computer Science Ph.D. student at the 
+				Federal University of Uberlândia, Brazil advised by Dr. Marcelo Maia.
+				</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
@@ -83,7 +85,17 @@
 						<p><i>Proceedings of the 29th Annual ACM Symposium on Applied Computing - SAC, Gyeongju, Korea, 2014, 3 pages.</i></p>
 					</div>
 				</div>
-
+				
+				<div class="fh5co-entry padding">
+					<img src="images/project-4.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<div>
+						<span class="fh5co-post-date">June 3, 2014</span>
+						<h2><a href="icpc14.html">Ranking Crowd Knowledge to Assist Software Development</a></h2>
+						<p>L. Souza, <b>E. Campos</b>, M. Maia</p>
+						<p><i>Proceedings of the 22nd International Conference on Program Comprehension - ICPC, Hyderabad, India, 2014, 11 pages.</i></p>
+					</div>
+				</div>
+				
 				<div class="fh5co-entry padding">
 					<img src="images/project-2.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
@@ -98,7 +110,7 @@
 					<img src="images/project-3.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
 						<span class="fh5co-post-date">November 3, 2014</span>
-						<h2><a href="sbes2014.html">On the Extraction of Cookbooks for APIs from the Crowd Knowledge</a></h2>
+						<h2><a href="sbes14.html">On the Extraction of Cookbooks for APIs from the Crowd Knowledge</a></h2>
 						<p>L. Souza, <b>E. Campos</b>, M. Maia</p>
 						<p><i>Proceedings of the 28th Brazilian Symposium on Software Engineering - SBES, Maceió, Brazil, 2014, 10 pages. Acceptance rate: 24%.</i></p>
 					</div>
@@ -108,26 +120,28 @@
 					<img src="images/project-4.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
 						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
+						<h2><a href="jsep16.html">Searching Crowd Knowledge to Recommend Solutions for API Usage Tasks</a></h2>
+						<p><b>E. Campos</b>, L. Souza, M. Maia</p>
+						<p><i>Journal of Software: Evolution and Process (JSEP), 30 pages, Wiley, 2016</i></p>
 					</div>
 				</div>
 
 				<div class="fh5co-entry padding">
 					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
+						<span class="fh5co-post-date">November 2, 2016</span>
+						<h2><a href="cascon16.html">Searching Stack Overflow for API-usage-related Bug Fixes Using Snippet-based Queries</a></h2>
+						<p><b>E. Campos</b>, M. Monperrus, M. Maia</p>
+						<p><i>Proceedings of the 26th Annual International Conference on Computer Science and Software Engineering, Toronto, Canada, 11 pages, 2016</i></p>
 					</div>
 				</div>
 
 				<div class="fh5co-entry padding">
 					<img src="images/project-6.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
-						<span class="fh5co-post-date">October 12, 2016</span>
-						<h2><a href="single.html">How to be an effective web developer</a></h2>
-						<p>How two simple exercises changed my life</p>
+						<span class="fh5co-post-date">November 10, 2017</span>
+						<h2><a href="esem17.html">Common Bug-fix Patterns: A Large-Scale Observational Study</a></h2>
+						<p><i>Proceedings of the 11th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement, Markham, Canada, 10 pages, 2017</i></p>
 					</div>
 				</div>
 
