Inclusao de imagem de bio e edicao de novos posts

--- a/esem17.html
+++ b/esem17.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Story &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Eduardo Campos</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -76,11 +76,11 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-						<p><i>[Background]</i>: There are more bugs in real-world programs than human programmers can realistically address. Several approaches have been proposed to aid debugging. A recent research direction that has been increasingly gaining interest to address the reduction of costs associated with defect repair is automatic program repair. </p>
-						<p>Recent work has shown that some kind of bugs are more suitable for automatic repair techniques. <i>[Aim]</i>: The detection and characterization of common bug-fix patterns in software repositories play an important role in advancing the field of automatic program repair. In this paper, we aim to characterize the occurrence of known bug-fix patterns in Java repositories at an unprecedented large scale.</p>
-						<p><i>[Method]</i>: The study was conducted for Java GitHub projects organized in two distinct data sets: the first one (i.e., Boa data set) contains more than 4 million bug-fix commits from 101,471 projects and the second one (i.e., Defects4J data set) contains 369 real bug fixes from five open-source projects. We used a domain-specific programming language called Boa in the first data set and conducted</p> 
-						<p>a manual analysis on the second data set in order to confront the results. <i>[Results]</i>: We characterized the prevalence of the five most common bug-fix patterns (identified in the work of Pan et al.) in those bug fixes. The combined results showed direct evidence that developers often forget to add IF preconditions in the code. Moreover, 76% of bug-fix commits associated with the IF-APC bug-fix pattern are </p>
-						<p>isolated from the other four bug-fix patterns analyzed. <i>[Conclusion]</i>: Targeting on bugs that miss preconditions is a feasible alternative in automatic repair techniques that would produce a relevant payback.</p>	
+						<p><i>[Background]</i>: There are more bugs in real-world programs than human programmers can realistically address. Several approaches have been proposed to aid debugging. A recent research direction that has been increasingly gaining interest to address the reduction of costs associated with defect repair is automatic program repair. Recent work has shown that some kind of bugs are more suitable for automatic repair techniques. </p>
+						<p><i>[Aim]</i>: The detection and characterization of common bug-fix patterns in software repositories play an important role in advancing the field of automatic program repair. In this paper, we aim to characterize the occurrence of known bug-fix patterns in Java repositories at an unprecedented large scale.</p>
+						<p><i>[Method]</i>: The study was conducted for Java GitHub projects organized in two distinct data sets: the first one (i.e., Boa data set) contains more than 4 million bug-fix commits from 101,471 projects and the second one (i.e., Defects4J data set) contains 369 real bug fixes from five open-source projects. We used a domain-specific programming language called Boa in the first data set and conducted a manual analysis on the second data set in order to confront the results. </p>
+						<p><i>[Results]</i>: We characterized the prevalence of the five most common bug-fix patterns (identified in the work of Pan et al.) in those bug fixes. The combined results showed direct evidence that developers often forget to add IF preconditions in the code. Moreover, 76% of bug-fix commits associated with the IF-APC bug-fix pattern are isolated from the other four bug-fix patterns analyzed. </p> 
+						<p><i>[Conclusion]</i>: Targeting on bugs that miss preconditions is a feasible alternative in automatic repair techniques that would produce a relevant payback.</p>	
 					</div>
 				</div>
 			</div>
