--- a/itng17.html
+++ b/itng17.html
@@ -68,17 +68,17 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>March 24, 2014</span>
-				<h2>Automatic categorization of questions from Q&A sites</h2>
+				<span>July 18, 2017</span>
+				<h2>Mining Historical Information to Study Bug Fixes</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-						<p>Q&A sites are attracting growing interest of software developers. The categorization of questions in terms of user concerns would open new opportunities to extract valuable information from millions of posts.</p>
-						<p>This paper presents a comparison between different classification algorithms to find the one that best classifies questions from Q&A sites, such as, Stack Overflow. In the classification process, we used the following classification algorithms: Naive Bayes, Multilayer Perceptron, Support Vector Machine, K-Nearest Neighbors, J4.8 Decision Tree and Random Forests.</p>
-						<p>We conducted an experimental study with Stack Overflow questions with posts equally divided into three domain categories: How-to-do-it, Need-to-know and Seeking-something. The attributes were extracted from a textual analysis of the title and body of each question. We considered a total of 8 attributes to get the data for each question. We found a classifier with an overall success rate of 84.16% and 92.5% on How-to-do-it category.</p>
+						<p>Software is present in almost all economic activity, and is boosting economic growth from many perspectives. At the same time, like any other man-made artifacts, software suffers from various bugs which lead to incorrect results, deadlocks, or even crashes of the entire system. </p>
+						<p>Several approaches have been proposed to aid debugging. An interesting recent research direction is automatic program repair, which achieves promising results towards the reduction of costs associated with defect repair in software maintenance. The identification of common bug fix patterns is important to generate program patches automatically. </p>
+						<p>In this paper, we conduct an empirical study with more than 4 million bug fixing commits distributed among 101,471 Java projects hosted on GitHub. We used a domain-specific programming language called <i>Boa</i> to analyze ultra-large-scale data efficiently. With Boa’s support, we automatically detect the prevalence of the 5 most common bug fix patterns (identified in the work of Pan et al.) in those bug fixing commits. </p>
 					</div>
 				</div>
 			</div>
