--- a/jsep16.html
+++ b/jsep16.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Story &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Eduardo Campos</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -76,12 +76,9 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-						<p>Stack Overflow (SO) is a question and answer service directed to issues related to software development. In SO, developers post questions related to a programming topic and other members of the site can provide answers to help them.</p>
-						<p>The information available on this type of service is also known as "crowd knowledge" and currently is one important trend in supporting activities related to software development.</p>
-						<p>We present an approach that makes use of "crowd knowledge" in SO to recommend information that can assist developer activities. This strategy recommends a ranked list of question and answer pairs</p> 
-                        <p>from SO based on a query. The criteria for ranking are based on three main aspects: the textual similarity of the pairs with respect to the query related to the developer's problem, the quality of the pairs, and a filtering mechanism that considers only "how-to" posts.</p>
-						<p>We conducted an experiment considering programming problems on three different topics (Swing, Boost and LINQ) widely used by the software development community to evaluate the proposed recommendation strategy. The results have shown that for <i>Lucene+Score+How-to</i> approach,</p> 
-                        <p>77.14% of the assessed activities have at least one recommended pair proved to be useful concerning the target programming problem.</p> 			
+						<p>Stack Overflow (SO) is a question and answer service directed to issues related to software development. In SO, developers post questions related to a programming topic and other members of the site can provide answers to help them. The information available on this type of service is also known as "crowd knowledge" and currently is one important trend in supporting activities related to software development. </p>						
+						<p>We present an approach that makes use of "crowd knowledge" in SO to recommend information that can assist developer activities. This strategy recommends a ranked list of question and answer pairs from SO based on a query. The criteria for ranking are based on three main aspects: the textual similarity of the pairs with respect to the query related to the developer's problem, the quality of the pairs, and a filtering mechanism that considers only "how-to" posts. </p>                        
+						<p>We conducted an experiment considering programming problems on three different topics (Swing, Boost and LINQ) widely used by the software development community to evaluate the proposed recommendation strategy. The results have shown that for <i>Lucene+Score+How-to</i> approach, 77.14% of the assessed activities have at least one recommended pair proved to be useful concerning the target programming problem. </p> 			
 					</div>
 				</div>
 			</div>
