italico na descricao do itng 2017 paper

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<span class="fh5co-post-date">July 18, 2017</span>
 						<h2><a href="itng17.html">Mining Historical Information to Study Bug Fixes</a></h2>
 						<p><b>E. Campos</b>, M. Maia</p>
-						<p>Latifi S. (eds) Information Technology - New Generations. Advances in Intelligent Systems and Computing, vol 558. Springer, Cham.</p>
+						<p><i>Latifi S. (eds) Information Technology - New Generations. Advances in Intelligent Systems and Computing, vol 558. Springer, Cham.</i></p>
 					</div>
 				</div>
 
