--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
 						<span class="fh5co-post-date">November 3, 2014</span>
 						<h2><a href="cbsoft14.html">Nuggets Miner: Assisting Developers by Harnessing the StackOverflow Crowd Knowledge and the GitHub Traceability</a></h2>
 						<p><b>E. Campos</b>, L. Souza, M. Maia</p>
-						<p><i>Proceedings of the Brazilian Conference on Software: Theory and Practice (CBSOFT) - Tool Session. Maceió, Brazil, 2014, 8 pages. Second-place Best Tool Award.</i></p>
+						<p><i>Proceedings of the Brazilian Conference on Software: Theory and Practice (CBSOFT) - Tool Session. Maceió-AL, Brazil, 2014, 8 pages.</i> 
+						<b>Second-place Best Tool Award.</b>
+						<img src="images/award-icon.gif" height="18px" style="vertical-align:middle; margin-left: 3px;">
+						</p>
 					</div>
 				</div>
 				
@@ -142,7 +145,10 @@
 						<span class="fh5co-post-date">June 3, 2014</span>
 						<h2><a href="icpc14.html">Ranking Crowd Knowledge to Assist Software Development</a></h2>
 						<p>L. Souza, <b>E. Campos</b>, M. Maia</p>
-						<p><i>Proceedings of the 22nd International Conference on Program Comprehension (ICPC), Hyderabad, India, 2014, 11 pages.</i></p>
+						<p><i>Proceedings of the 22nd International Conference on Program Comprehension (ICPC), Hyderabad, India, 2014, 11 pages.</i><br>
+						<b>ACM SIGSOFT Distinguished Paper Award.</b>
+						<img src="images/award-icon.gif" height="18px" style="vertical-align:middle; margin-left: 3px;">
+						</p>
 					</div>
 				</div>
 				
