Editando o previous/next posts

--- a/sbes14.html
+++ b/sbes14.html
@@ -90,12 +90,12 @@
 		<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(images/project-4.jpg)">
 			<div class="overlay"></div>
 
-			<a class="copy" href="#">
+			<a class="copy" href="cbsoft14.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Previous Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Nuggets Miner: Assisting Developers by Harnessing the StackOverflow Crowd Knowledge and the GitHub Traceability</h2>
 						</div>
 					</div>
 				</div>
@@ -104,12 +104,12 @@
 		</div>
 		<div class="fh5co-cover next fh5co-cover-sm" style="background-image: url(images/project-5.jpg)">
 			<div class="overlay"></div>
-			<a class="copy" href="#">
+			<a class="copy" href="jsep16.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Next Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Searching Crowd Knowledge to Recommend Solutions for API Usage Tasks</h2>
 						</div>
 					</div>
 				</div>
