--- a/cbsoft14.html
+++ b/cbsoft14.html
@@ -89,12 +89,12 @@
 		<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(images/project-4.jpg)">
 			<div class="overlay"></div>
 
-			<a class="copy" href="#">
+			<a class="copy" href="icpc14.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Previous Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Ranking Crowd Knowledge to Assist Software Development</h2>
 						</div>
 					</div>
 				</div>
@@ -103,12 +103,12 @@
 		</div>
 		<div class="fh5co-cover next fh5co-cover-sm" style="background-image: url(images/project-5.jpg)">
 			<div class="overlay"></div>
-			<a class="copy" href="#">
+			<a class="copy" href="sbes14.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Next Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>On the Extraction of Cookbooks for APIs from the Crowd Knowledge</h2>
 						</div>
 					</div>
 				</div>
