--- a/esem17.html
+++ b/esem17.html
@@ -91,12 +91,12 @@
 		<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(images/project-4.jpg)">
 			<div class="overlay"></div>
 
-			<a class="copy" href="#">
+			<a class="copy" href="itng17.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Previous Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Mining Historical Information to Study Bug Fixes</h2>
 						</div>
 					</div>
 				</div>
@@ -105,17 +105,16 @@
 		</div>
 		<div class="fh5co-cover next fh5co-cover-sm" style="background-image: url(images/project-5.jpg)">
 			<div class="overlay"></div>
-			<a class="copy" href="#">
+			<a class="copy" href="sac14.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Next Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Automatic Categorization of Questions from Q&A Sites</h2>
 						</div>
 					</div>
 				</div>
 			</a>
-
 		</div>
 	</div>
 
