--- a/itng17.html
+++ b/itng17.html
@@ -89,12 +89,12 @@
 		<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(images/project-4.jpg)">
 			<div class="overlay"></div>
 
-			<a class="copy" href="#">
+			<a class="copy" href="cascon16.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Previous Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Searching Stack Overflow for API-usage-related Bug Fixes Using Snippet-based Queries</h2>
 						</div>
 					</div>
 				</div>
@@ -103,12 +103,12 @@
 		</div>
 		<div class="fh5co-cover next fh5co-cover-sm" style="background-image: url(images/project-5.jpg)">
 			<div class="overlay"></div>
-			<a class="copy" href="#">
+			<a class="copy" href="esem17.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Next Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Common Bug-fix Patterns: A Large-scale Observational Study</h2>
 						</div>
 					</div>
 				</div>
