--- a/sac14.html
+++ b/sac14.html
@@ -69,7 +69,7 @@
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<span>March 24, 2014</span>
-				<h2>Automatic categorization of questions from Q&A sites</h2>
+				<h2>Automatic Categorization of Questions from Q&A Sites</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
@@ -89,26 +89,25 @@
 		<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(images/project-4.jpg)">
 			<div class="overlay"></div>
 
-			<a class="copy" href="#">
+			<a class="copy" href="esem17.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Previous Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Common Bug-fix Patterns: A Large-scale Observational Study</h2>
 						</div>
 					</div>
 				</div>
 			</a>
-
 		</div>
 		<div class="fh5co-cover next fh5co-cover-sm" style="background-image: url(images/project-5.jpg)">
 			<div class="overlay"></div>
-			<a class="copy" href="#">
+			<a class="copy" href="icpc14.html">
 				<div class="display-t">
 					<div class="display-tc">
 						<div>
 							<span>Next Post</span>
-							<h2>How to be an affective web developer</h2>
+							<h2>Ranking Crowd Knowledge to Assist Software Development</h2>
 						</div>
 					</div>
 				</div>
