--- a/index.html
+++ b/index.html
@@ -73,17 +73,22 @@
 	<div id="page">
 		<div id="fh5co-aside" style="background-image: url(images/image_1.jpg)">
 			<div class="overlay"></div>
-			<nav role="navigation">
+			<!--<nav role="navigation">
 				<ul>
 					<li><a href="index.html"><i class="icon-home"></i></a></li>
 					<li><a href="https://www.facebook.com/eduardo.campos.9256028"><i class="icon-facebook"></i></a></li>
 				</ul>
-			</nav>
+			</nav>-->
 			<div class="featured">
 				<img src="images/about.jpg" alt="" height="380" width="300">
-				<span>Bio</span>
+				<!--<span>Bio</span>-->
 				<h2>Hi! I'm Eduardo Campos, a Computer Science Ph.D. student at the 
 				Federal University of Uberlândia, Brazil advised by <a href="http://lascam.facom.ufu.br/cms/">Dr. Marcelo Maia</a>. 
+				<br><br><a href="index.html"><i class="icon-home"></i></a></li>
+				<a href="https://www.facebook.com/eduardo.campos.9256028"><i class="icon-facebook"></i></a>
+				<a href="mailto:eduardocunha11@gmail.com"><i class="icon-mail"></i></a>
+				<a href="https://twitter.com/eduardocunha080"><i class="icon-twitter"></i></a>
+				<a href="https://www.linkedin.com/in/eduardo-cunha-campos-82319a47/"><i class="icon-linkedin"></i></a>
 				</h2>
 			</div>
 		</div>
