Introducao da label

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			</nav>-->
 			<div class="featured">
 				<img src="images/about.jpg" alt="" height="380" width="300">
-				<!--<span>Bio</span>-->
+				<span>Bio</span>
 				<h2>Hi! I'm Eduardo Campos, a Computer Science Ph.D. student at the 
 				Federal University of Uberlândia, Brazil advised by <a href="http://lascam.facom.ufu.br/cms/">Dr. Marcelo Maia</a>. 
 				<br><br><a href="index.html"><i class="icon-home"></i></a></li>
