--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			</nav>-->
 			<div class="featured">
 				<img src="images/about.jpg" alt="" height="380" width="300">
-				<span>Bio</span>
+				<!--<span>Bio</span>-->
 				<h2>Hi! I'm Eduardo Campos, a Computer Science Ph.D. student at the 
 				Federal University of Uberlândia, Brazil advised by <a href="http://lascam.facom.ufu.br/cms/">Dr. Marcelo Maia</a>. 
 				<br><br><a href="index.html"><i class="icon-home"></i></a></li>
@@ -89,6 +89,7 @@
 				<a href="mailto:eduardocunha11@gmail.com"><i class="icon-mail"></i></a>
 				<a href="https://twitter.com/eduardocunha080"><i class="icon-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/eduardo-cunha-campos-82319a47/"><i class="icon-linkedin"></i></a>
+				<a href="material.html"><i class="icon-book"></i></a>
 				</h2>
 			</div>
 		</div>
