retirei a disciplina de otimizacao do menu de opcoes

--- a/material.html
+++ b/material.html
@@ -79,7 +79,7 @@
 						<ul>
 						<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software</i></a></li>
 						<li><a href="gsi526.html"><i class="icon-home"></i><i> GSI526 - Engenharia de Software</i></a></li>
-						<li><a href="gsi530.html"><i class="icon-home"></i><i> GSI530 - Otimização</i></a></li>
+						<!--<li><a href="gsi530.html"><i class="icon-home"></i><i> GSI530 - Otimização</i></a></li>-->
 						</ul>
 					</div>
 				</div>
