adicao da nova disciplina de agrimensura

--- a/gac023.html
+++ b/gac023.html
@@ -69,26 +69,28 @@
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<span>Disciplinas 2º Semestre de 2018 - Sistemas de Informação (UFU)</span>
-				<h2>GSI522 - Modelagem de Software</h2>
+				<h2>GAC023 - Programação de Computadores (Eng. de Agrimensura)</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-						<ul>						
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula1 - IntroduçãoModelagemSW.pptx"> Aula 1 - Introdução à Modelagem de Software</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula2 - Requisitos.pptx"> Aula 2 - Requisitos de Software</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/aula2.pdf"> Aula 2</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula3.pdf"> Aula 3</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula4.pdf"> Aula 4</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula5.pdf"> Aula 5</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula6.pdf"> Aula 6</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula7.pdf"> Aula 7</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula8.pdf"> Aula 8</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula9.pdf"> Aula 9</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula10.pdf"> Aula 10</a></li>-->
+						<ul>
+						<li><i class="icon-book"></i><a href="aulas/gac023/Aula1-ComandosCondicionais.pdf"> Aula 1 - Comandos Condicionais</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 2 - Comandos de Repetição</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/Aula3-Array.pdf"> Aula 3 - Vetores e Matrizes</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC01.pdf"> Lista 1 - Comandos Condicionais</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 4 - Comandos de Repetição</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula2.pdf"> Aula 2</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula5.pdf"> Aula 5</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula6.pdf"> Aula 6</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula7.pdf"> Aula 7</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula8.pdf"> Aula 8</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula9.pdf"> Aula 9</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/aula10.pdf"> Aula 10</a></button></li>-->
 						</ul>
 					</div>
 				</div>
