--- a/gsi526.html
+++ b/gsi526.html
@@ -78,6 +78,7 @@
 					<div>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de SW.pptx"> Aula 2 - Requisitos de Software</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2.pdf"> Aula 2</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4.pdf"> Aula 4</a></button></li>
