adicao do trabalho de modelagem

--- a/gsi522.html
+++ b/gsi522.html
@@ -80,10 +80,12 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula1 - IntroduçãoModelagemSW.pptx"> Aula 1 - Introdução à Modelagem de Software</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula2 - Requisitos.pptx"> Aula 2 - Requisitos de Software</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/aula2.pdf"> Aula 2</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula3.pdf"> Aula 3</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula4.pdf"> Aula 4</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula5.pdf"> Aula 5</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/trab_modelagem.pdf"> Trabalho Final</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/P1-HealthWatcher.pdf"> Projeto 1: Health-Watcher</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/P3-Voos.pdf"> Projeto 3: Sistema de Voos</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/P4-Systrack.pdf"> Projeto 4: Systrack</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/aula5.pdf"> Aula 5</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/aula6.pdf"> Aula 6</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/aula7.pdf"> Aula 7</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/aula8.pdf"> Aula 8</a></li>
