--- a/material.html
+++ b/material.html
@@ -77,9 +77,9 @@
 				<div class="fh5co-entry padding">
 					<div>
 						<ul>
-						<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software</i></a></li>
-						<li><a href="gsi526.html"><i class="icon-home"></i><i> GSI526 - Engenharia de Software</i></a></li>
-						<li><a href="gac023.html"><i class="icon-home"></i><i> GAC023 - Programação de Computadores (Eng. de Agrimensura)</i></a></li>
+						<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50-16h50 / Quarta: 13h10-14h50)</b></i></a></li>
+						<li><a href="gsi526.html"><i class="icon-home"></i><i> GSI526 - Engenharia de Software <b>(Segunda: 08h50-10h40 / Terça: 10h40-12h20)</b></i></a></li>
+						<li><a href="gac023.html"><i class="icon-home"></i><i> GAC023 - Programação de Computadores <b>(Terça: 08h50-10h40 / Quarta: 14h50-16h50)</b></i></a></li>
 						</ul>
 					</div>
 				</div>
