adicao da avaliacao das 3 disciplinas

--- a/gac023.html
+++ b/gac023.html
@@ -76,6 +76,17 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
+					<b>Avaliação:</b>
+					<ul>
+					<li>Prova 1 - 22 pts <b>(26/09)</b></li>
+					<li>Prova 2 - 22 pts <b>(31/10)</b></li>
+					<li>Prova 3 - 22 pts <b>(12/12)</b></li>
+					<li>Trabalho - 20 pts <b>(12/12)</b></li>
+					<li>Listas de Exercícios - 14 pts </li>
+					</ul>
+					</div>
+					<b>Material:</b>
+					<div>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula1-ComandosCondicionais.pdf"> Aula 1 - Comandos Condicionais</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 2 - Comandos de Repetição</a></button></li>
