--- a/gsi522.html
+++ b/gsi522.html
@@ -76,6 +76,15 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
+					<b>Avaliação:</b>
+					<ul>
+					<li>Prova 1 - 35 pts <b>(09/10)</b></li>
+					<li>Prova 2 - 35 pts <b>(13/11)</b></li>
+					<li>Trabalho - 30 pts <b>(12/12)</b></li>
+					</ul>
+					</div>
+					<b>Material:</b>
+					<div>
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula1 - IntroduçãoModelagemSW.pptx"> Aula 1 - Introdução à Modelagem de Software</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula2 - Requisitos.pptx"> Aula 2 - Requisitos de Software</a></li>
