--- a/gsi526.html
+++ b/gsi526.html
@@ -76,6 +76,15 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
+					<b>Avaliação:</b>
+					<ul>
+					<li>Prova 1 - 30 pts <b>(08/10)</b></li>
+					<li>Prova 2 - 35 pts <b>(12/11)</b></li>
+					<li>Prova 3 - 35 pts <b>(11/12)</b></li>
+					</ul>
+					</div>
+					<b>Material:</b>
+					<div>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de SW.pptx"> Aula 2 - Requisitos de Software</a></button></li>
