adicao de apostila sobre a linguagem C

--- a/gac023.html
+++ b/gac023.html
@@ -91,6 +91,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula1-ComandosCondicionais.pdf"> Aula 1 - Comandos Condicionais</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 2 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula3-Array.pdf"> Aula 3 - Vetores e Matrizes</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/apostilaC.pdf"> Apostila de Linguagem C</a></button></li>
+						<li><i class="icon-book"></i><a href="https://programacaodescomplicada.wordpress.com/indice/linguagem-c/"> Vídeo Aulas sobre Linguagem C</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC01.pdf"> Lista 1 - Comandos Condicionais</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC02.pdf"> Lista 2 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC03.pdf"> Lista 3 - Vetores e Matrizes</a></button></li>
