--- a/gsi526.html
+++ b/gsi526.html
@@ -88,8 +88,12 @@
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de SW.pptx"> Aula 2 - Requisitos de Software</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2.pdf"> Aula 2</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3.pdf"> Aula 3</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Manifesto_agil.pdf"> Aula 4 - Manifesto Ágil </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Metodos_ageis.pdf"> Aula 4 - Métodos Ágeis </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_papeis.pdf"> Aula 5 - Scrum: Papéis e Reuniões </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_fases.pdf"> Aula 5 - Fases do Scrum </a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6.pdf"> Aula 6</a></button></li>
