--- a/gac023.html
+++ b/gac023.html
@@ -97,6 +97,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC02.pdf"> Lista 2 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC03.pdf"> Lista 3 - Vetores e Matrizes</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_pca.pdf"> Exercícios da lista para entrega</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_19_set.rar"> Exercícios da aula de <b>19/09</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 4 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula2.pdf"> Aula 2</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
