--- a/gac023.html
+++ b/gac023.html
@@ -96,10 +96,10 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC01.pdf"> Lista 1 - Comandos Condicionais</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC02.pdf"> Lista 2 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC03.pdf"> Lista 3 - Vetores e Matrizes</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_pca.pdf"> Exercícios da lista para entrega</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_pca.pdf"> Exercícios da lista para entrega <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_19_set.rar"> Exercícios da aula de <b>19/09</b></a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 4 - Comandos de Repetição</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/aula2.pdf"> Aula 2</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> <b>NEW!</b> Exercícios da lista para entrega <b>10/10</b></a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula2.pdf"> Aula 2</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula5.pdf"> Aula 5</a></button></li>
