adicao dos exercicios da aula 26 set

--- a/gac023.html
+++ b/gac023.html
@@ -98,6 +98,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC03.pdf"> Lista 3 - Vetores e Matrizes</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_pca.pdf"> Exercícios da lista para entrega <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_19_set.rar"> Exercícios da aula de <b>19/09</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_26_set.rar"> Exercícios da aula de <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> <b>NEW!</b> Exercícios da lista para entrega <b>10/10</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula2.pdf"> Aula 2</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
