adicionei as aulas sobre bad smells e refactoring

--- a/gsi526.html
+++ b/gsi526.html
@@ -93,9 +93,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Metodos_ageis.pdf"> Aula 4 - Métodos Ágeis </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_papeis.pdf"> Aula 5 - Scrum: Papéis e Reuniões </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_fases.pdf"> Aula 5 - Fases do Scrum </a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula3.pdf"> Aula 3</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4.pdf"> Aula 4</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Refatoracao.pdf"> Aula 6 - Refatoração</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Bad-smells.ppt"> Aula 7 - <i>Bad Smells</i></a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6.pdf"> Aula 6</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7.pdf"> Aula 7</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8.pdf"> Aula 8</a></button></li>
