--- a/gac023.html
+++ b/gac023.html
@@ -91,17 +91,18 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula1-ComandosCondicionais.pdf"> Aula 1 - Comandos Condicionais</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 2 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula3-Array.pdf"> Aula 3 - Vetores e Matrizes</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/Aula4-Strings.ppt"> Aula 4 - Strings</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/apostilaC.pdf"> Apostila de Linguagem C</a></button></li>
 						<li><i class="icon-book"></i><a href="https://programacaodescomplicada.wordpress.com/indice/linguagem-c/"> Vídeo Aulas sobre Linguagem C</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC01.pdf"> Lista 1 - Comandos Condicionais</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC02.pdf"> Lista 2 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC03.pdf"> Lista 3 - Vetores e Matrizes</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC04-Strings.pdf"> Lista 4 - Strings</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_pca.pdf"> Exercícios da lista para entrega <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_19_set.rar"> Exercícios da aula de <b>19/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_26_set.rar"> Exercícios da aula de <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> <b>NEW!</b> Exercícios da lista para entrega <b>10/10</b></a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula2.pdf"> Aula 2</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula6.pdf"> Aula 6</a></button></li>
