--- a/gac023.html
+++ b/gac023.html
@@ -92,6 +92,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula2-ComandosRepeticao.pdf"> Aula 2 - Comandos de Repetição</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula3-Array.pdf"> Aula 3 - Vetores e Matrizes</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/Aula4-Strings.ppt"> Aula 4 - Strings</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/Aula5-Estruturas.ppt"> Aula 5 - Structs</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/apostilaC.pdf"> Apostila de Linguagem C</a></button></li>
 						<li><i class="icon-book"></i><a href="https://programacaodescomplicada.wordpress.com/indice/linguagem-c/"> Vídeo Aulas sobre Linguagem C</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/ListaC01.pdf"> Lista 1 - Comandos Condicionais</a></button></li>
@@ -101,7 +102,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_pca.pdf"> Exercícios da lista para entrega <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_19_set.rar"> Exercícios da aula de <b>19/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_26_set.rar"> Exercícios da aula de <b>26/09</b></a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> <b>NEW!</b> Exercícios da lista para entrega <b>10/10</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> Exercícios da lista para entrega <b>10/10</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios3_pca.pdf"> <b>[NEW!]</b> Exercícios da lista para entrega <b>29/10</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas da primeira prova</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula5.pdf"> Aula 5</a></button></li>
