--- a/gsi526.html
+++ b/gsi526.html
@@ -95,6 +95,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_fases.pdf"> Aula 5 - Fases do Scrum </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Refatoracao.pdf"> Aula 6 - Refatoração</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Bad-smells.ppt"> Aula 7 - <i>Bad Smells</i></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <b>[NEW!]</b> Notas da primeira prova </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6.pdf"> Aula 6</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7.pdf"> Aula 7</a></button></li>
