--- a/gac023.html
+++ b/gac023.html
@@ -103,8 +103,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_19_set.rar"> Exercícios da aula de <b>19/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_26_set.rar"> Exercícios da aula de <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> Exercícios da lista para entrega <b>10/10</b></a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios3_pca.pdf"> <b>[NEW!]</b> Exercícios da lista para entrega <b>29/10</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios3_pca.pdf"> <b>[NEW!]</b> Exercícios da lista para entrega <b>31/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas da primeira prova</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/trabalho_pca.pdf"> <b>[NEW!]</b> Trabalho Final</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula5.pdf"> Aula 5</a></button></li>
