--- a/gac023.html
+++ b/gac023.html
@@ -102,6 +102,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_pca.pdf"> Exercícios da lista para entrega <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_19_set.rar"> Exercícios da aula de <b>19/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_26_set.rar"> Exercícios da aula de <b>26/09</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_31_out.rar"> Exercícios da aula de <b>31/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> Exercícios da lista para entrega <b>10/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios3_pca.pdf"> <b>[NEW!]</b> Exercícios da lista para entrega <b>31/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas da primeira prova</a></button></li>
