--- a/gsi522.html
+++ b/gsi522.html
@@ -91,6 +91,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula6 - Estados.pptx"> Aula 6 - Diagrama de Estados</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula7 - Atividades.pptx"> Aula 7 - Diagrama de Atividades</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula8 - ResumoDiagramas.pdf"> Aula 8 - Resumo dos Diagramas UML</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/trab_modelagem.pdf"> Trabalho Final</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P1-HealthWatcher.pdf"> Projeto 1: Health-Watcher</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
