adicao das aulas sobre testes (esof) e funcoes e pilhas (pca)

--- a/gsi526.html
+++ b/gsi526.html
@@ -97,6 +97,11 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Bad-smells.ppt"> Aula 7 - <i>Bad Smells</i></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software </a></button></li>						
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Verificação, Validação e Teste de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Desenvolvimento.pdf"> Aula 9 - Testes de Desenvolvimento</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <b>[NEW!]</b> Notas da primeira prova </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6.pdf"> Aula 6</a></button></li>
