notas da prova 2 de pca e esof atualizadas no site!

--- a/gac023.html
+++ b/gac023.html
@@ -109,7 +109,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_07_nov.rar"> Exercícios da aula de <b>07/11</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> Exercícios da lista para entrega <b>10/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios3_pca.pdf"> Exercícios da lista para entrega <b>31/10</b></a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas da primeira prova</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas da segunda prova</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/trabalho_pca.pdf"> <b>[NEW!]</b> Trabalho Final</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
