--- a/gsi526.html
+++ b/gsi526.html
@@ -102,7 +102,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Desenvolvimento.pdf"> Aula 9 - Testes de Desenvolvimento</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <b>[NEW!]</b> Notas da primeira prova </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <b>[NEW!]</b> Notas da segunda prova </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6.pdf"> Aula 6</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7.pdf"> Aula 7</a></button></li>
