Adicao das aulas de Modelagem e Esof - Sistemas de Controle de Versao

--- a/gsi522.html
+++ b/gsi522.html
@@ -95,6 +95,10 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula6 - Estados.pptx"> Aula 6 - Diagrama de Estados</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula7 - Atividades.pptx"> Aula 7 - Diagrama de Atividades</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula8 - ResumoDiagramas.pdf"> Aula 8 - Resumo dos Diagramas UML</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula9 - Arquitetura de SW.pptx"> Aula 9 - Arquitetura de Software</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula10- SistemasDeControleDeVersao.pdf"> Aula 10 - Sistemas de Controle de Versão</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11 - ArgoUML_casos.pdf"> Aula 11 - ArgoUML: Diagrama de Casos de Uso</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11- ArgoUML_classes.pdf"> Aula 11 - ArgoUML: Diagrama de Classes</a></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi522/trab_modelagem.pdf"> Trabalho Final</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P1-HealthWatcher.pdf"> Projeto 1: Health-Watcher</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
